@@ -65,7 +65,7 @@ public class TypeReferenceNodeContext extends AbstractCompletionProvider<TypeRef
             completionItems.addAll(this.getCompletionItemList(moduleContent, context));
         } else {
             List<Symbol> symbols = context.visibleSymbols(context.getCursorPosition()).stream()
-                    .filter(predicate.get()).collect(Collectors.toList());
+                    .filter(predicate.get()).toList();
             completionItems.addAll(this.getCompletionItemList(symbols, context));
             completionItems.addAll(this.getModuleCompletionItems(context));
         }
