@@ -75,6 +75,6 @@ public class QueryExpressionUtil {
         langLibMethods.addAll(types.TYPEDESC.langLibMethods());
         langLibMethods.addAll(types.XML.langLibMethods());
 
-        return langLibMethods.stream().distinct().collect(Collectors.toList());
+        return langLibMethods.stream().distinct().toList();
     }
 }
