@@ -44,7 +44,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Ballerina toml completion context.
@@ -102,7 +101,7 @@ public class BallerinaTomlCompletionContext implements TomlCompletionContext {
         }
 
         return ((ModulePartNode) document.get().syntaxTree().rootNode()).imports().stream()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
