@@ -93,7 +93,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 /**
  * Generates the Page bClasses for bal packages.
@@ -547,7 +546,7 @@ public class Generator {
                 classFunctions
                         .stream()
                         .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
+                .toList();
 
         functions.addAll(classFunctions);
 
@@ -665,7 +664,7 @@ public class Generator {
                 objectFunctions
                         .stream()
                         .noneMatch(objFunction -> objFunction.name.equals(includedFunction.name)))
-                .collect(Collectors.toList());
+                .toList();
 
         functions.addAll(objectFunctions);
 
@@ -677,7 +676,7 @@ public class Generator {
         for (FunctionType functionType : functionTypes) {
             List<DefaultableVariable> parameters = new ArrayList<>(functionType.paramTypes.stream()
                     .map(type -> new DefaultableVariable(type.name, type.description, false,
-                            type.elementType, "")).collect(Collectors.toList()));
+                            type.elementType, "")).toList());
 
             List<Variable> returnParameters = new ArrayList<>();
             if (functionType.returnType != null) {
